<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".EditFlightActivity">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" android:padding="24dp">
            <TextView
                    android:text="@string/edit_flight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView5" android:textSize="24sp"/>
            <CalendarView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/calendarView"/>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <AutoCompleteTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/callsign"
                        android:layout_weight="2"
                        android:hint="@string/callsign"
                        android:dropDownHeight="wrap_content" android:inputType="textCapCharacters|textNoSuggestions"/>
                <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"

                        android:id="@+id/type" android:layout_weight="1" android:autoText="false"
                        android:hint="@string/type" android:inputType="textCapCharacters|textNoSuggestions"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textCapCharacters|textNoSuggestions"
                        android:ems="10"
                        android:id="@+id/from" android:layout_weight="1" android:hint="@string/from"/>
                <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textCapCharacters|textNoSuggestions"
                        android:ems="10"
                        android:id="@+id/to" android:layout_weight="1" android:hint="@string/to"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <EditText
                        android:layout_width="159dp"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:ems="10"
                        android:id="@+id/startHours" android:hint="@string/start_hourmeter"/>
                <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:ems="10"
                        android:id="@+id/endHours" android:hint="@string/end_hourmeter"/>
            </LinearLayout>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/hours" android:layout_weight="1" android:hint="@string/total_time_flight"
                    android:inputType="numberDecimal"/>
            <Button
                    android:text="@string/save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/save_flight_buttom"
                    android:onClick="saveFlight"/>
            <Switch
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/swipe_to_delete_switch"
                    android:text="@string/swipe_to_delete"/>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>